# puny-manager

./: README.md  pyproject.toml
puny/: adding.py  cli.py  getting.py  i18n.py  passwd.py  version.py
puny_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
