[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "puny-manager"
version = "1.3"
description = "Puny Manager – minimaler, verschlüsselter Passwortmanager"
requires-python = ">=3.10"
dependencies = [
    "cryptography",
    "pyperclip",
]

[project.scripts]
puny-manager = "puny.cli:main"

