[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "puny-manager"
version = "1.3.1"
description = "Puny Manager – minimal password manager"
requires-python = ">=3.10"
dependencies = [
    "cryptography",
    "pyperclip",
]

[project.scripts]
puny-manager = "puny.cli:main"

